--- a/index.html
+++ b/index.html
@@ -1,11 +1,31 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" type="text/css" href="http://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+
 </head>
+
 <body>
-    
+
+    <main>
+
+        <div class="topo-mibrasil">
+            <div class="grid-icon-info"><img src="./assets/media/Branco.svg" alt="" style="width: 1rem;"><span>Parcele em até<strong> 12x sem juros</strong></span></div>
+            <div class="grid-icon-info"><img src="./assets/media/Branco.svg" alt="" style="width: 1rem;"><span><strong>Frete Grátis</strong> acima de R$200*</span></div>
+            <div class="grid-icon-info"><img src="./assets/media/Branco.svg" alt="" style="width: 1rem;"><span><strong>8% de desconto</strong> à vista</span></div>
+        </div>
+
+        <div><img src="./assets/media/Screenshot_1.png" alt="" style="width: 100%;"></div>
+    </main>
+
+    <script src=""></script>
+    <script type="text/javascript" src="http://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
 </body>
 </html>
