--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Topo Site</title>
     <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="stylesheet" type="text/css" href="http://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
@@ -17,15 +17,20 @@
     <main>
 
         <div class="topo-mibrasil">
-            <div class="grid-icon-info"><img src="./assets/media/Branco.svg" alt="" style="width: 1rem;"><span>Parcele em até<strong> 12x sem juros</strong></span></div>
-            <div class="grid-icon-info"><img src="./assets/media/Branco.svg" alt="" style="width: 1rem;"><span><strong>Frete Grátis</strong> acima de R$200*</span></div>
-            <div class="grid-icon-info"><img src="./assets/media/Branco.svg" alt="" style="width: 1rem;"><span><strong>8% de desconto</strong> à vista</span></div>
+            <div class="grid-icon-info slide"><img src="./assets/media/Branco.svg" style="width: 1rem;"><span>Parcele em até<strong> 12x sem juros</strong></span></div>
+            <div class="grid-icon-info slide"><img src="./assets/media/Branco.svg" style="width: 1rem;"><span><strong>Frete Grátis</strong> acima de R$200*</span></div>
+            <div class="grid-icon-info slide"><img src="./assets/media/Branco.svg" style="width: 1rem;"><span><strong>8% de desconto</strong> à vista</span></div>
         </div>
 
-        <div><img src="./assets/media/Screenshot_1.png" alt="" style="width: 100%;"></div>
+        <div>
+            <img src="./assets/media/Screenshot_1.png" style="width: 100%;" class="desktop">
+            <img src="./assets/media/Screenshot-mob.png" style="width: 100%;" class="mob">
+        </div>
+
     </main>
 
     <script src=""></script>
     <script type="text/javascript" src="http://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+    
 </body>
 </html>
