--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
 
     <main>
 
-        <div class="topo-mibrasil">
-            <div class="grid-icon-info slide"><img src="./assets/media/Branco.svg" style="width: 1rem;"><span>Parcele em até<strong> 12x sem juros</strong></span></div>
-            <div class="grid-icon-info slide"><img src="./assets/media/Branco.svg" style="width: 1rem;"><span><strong>Frete Grátis</strong> acima de R$200*</span></div>
-            <div class="grid-icon-info slide"><img src="./assets/media/Branco.svg" style="width: 1rem;"><span><strong>8% de desconto</strong> à vista</span></div>
+        <div class="topo-mibrasil ">
+            <div class="grid-icon-info"><img src="./assets/media/Branco.svg" style="width: 1rem;"><span>Parcele em até<strong> 12x sem juros</strong></span></div>
+            <div class="grid-icon-info"><img src="./assets/media/Branco.svg" style="width: 1rem;"><span><strong>Frete Grátis</strong> acima de R$200*</span></div>
+            <div class="grid-icon-info"><img src="./assets/media/Branco.svg" style="width: 1rem;"><span><strong>8% de desconto</strong> à vista</span></div>
         </div>
 
         <div>
