--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <main>
 
-        <div class="topo-mibrasil ">
+        <div class="topo-mibrasil galeria">
             <div class="grid-icon-info"><img src="./assets/media/Branco.svg" style="width: 1rem;"><span>Parcele em até<strong> 12x sem juros</strong></span></div>
             <div class="grid-icon-info"><img src="./assets/media/Branco.svg" style="width: 1rem;"><span><strong>Frete Grátis</strong> acima de R$200*</span></div>
             <div class="grid-icon-info"><img src="./assets/media/Branco.svg" style="width: 1rem;"><span><strong>8% de desconto</strong> à vista</span></div>
@@ -29,7 +29,7 @@
 
     </main>
 
-    <script src=""></script>
+    <script src="./assets/js/main.js"></script>
     <script type="text/javascript" src="http://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
     
 </body>
