--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
     <main>
 
         <div class="topo-mibrasil">
-            <div class="grid-icon-info"><img src="./assets/media/Branco.svg" style="width: 1rem;"><span>Parcele em até<strong> 12x sem juros</strong></span></div>
-            <div class="grid-icon-info"><img src="./assets/media/Branco.svg" style="width: 1rem;"><span><strong>Frete Grátis</strong> acima de R$200*</span></div>
-            <div class="grid-icon-info"><img src="./assets/media/Branco.svg" style="width: 1rem;"><span><strong>8% de desconto</strong> à vista</span></div>
+            <div class="grid-icon-info item-1"><img src="./assets/media/Branco.svg" style="width: 1rem;"><span>Parcele em até<strong> 12x sem juros</strong></span></div>
+            <div class="grid-icon-info item-2"><img src="./assets/media/Branco.svg" style="width: 1rem;"><span><strong>Frete Grátis</strong> acima de R$200*</span></div>
+            <div class="grid-icon-info item-3"><img src="./assets/media/Branco.svg" style="width: 1rem;"><span><strong>8% de desconto</strong> à vista</span></div>
         </div>
 
         <div>
