--- a/index.html
+++ b/index.html
@@ -15,14 +15,18 @@
     <main>
 
         <div class="topo-mibrasil">
-            <div id="promo1" class="grid-icon-info item-1"><img src="./assets/media/Branco.svg" style="width: 1rem;">  <span>Parcele em até<strong> 12x sem juros</strong></span></div>
+
+            <div id="promo1" class="grid-icon-info item-1" data=""><img src="./assets/media/Branco.svg" style="width: 1rem;">  <span>Parcele em até<strong> 12x sem juros</strong></span></div>
             <div id="promo2" class="grid-icon-info item-2"><img src="./assets/media/Branco.svg" style="width: 1rem;">  <span><strong>Frete Grátis</strong> acima de R$200*</span></div>
             <div id="promo3" class="grid-icon-info item-3"><img src="./assets/media/Branco.svg" style="width: 1rem;">  <span><strong>8% de desconto</strong> à vista</span></div>
+
         </div>
 
         <div>
+
             <img src="./assets/media/Screenshot_1.png" style="width: 100%;" class="desktop">
             <img src="./assets/media/Screenshot-mob.png" style="width: 100%;" class="mob">
+            
         </div>
 
     </main>
